[EDELIVERY-5557] refactoring and Sonar fixes for Weblogic code changes for Tomcat and Wildfly